Fixed Repo Grid Layout - cards should now automatically wrap around to fit the width of the screen, using the minimum width of the cards as a reference for element sizing

--- a/src/app/components/repo-card/repo-card.component.scss
+++ b/src/app/components/repo-card/repo-card.component.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   gap: $space-3;
   padding: $space-5;
-  min-width: 380px;
+  min-width: $card-min-width;
   background-color: $color-bg-secondary;
   border: 1px solid $color-border;
   border-radius: $radius-lg;
