--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -61,6 +61,7 @@ $breakpoint-lg: 1024px;
 $breakpoint-xl: 1280px;
 $container-max: 1400px;
 $nav-height: 64px;
+$card-min-width: 380px;
 
 // Effects
 $shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
